fix nav spacing

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ nav {
   height: 20px;
   flex: 100%;
   display: flex;
+  margin-bottom: 20px;
 }
 
 nav ul {
